# pentatelnet

./: .gitignore  AUTHORS  ChangeLog  INSTALL  NEWS  README.md  configure.ac
src/: Makefile.am  telnetd.c
